[gd_scene load_steps=13 format=3 uid="uid://vk58qiyyq4rl"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_idl53"]
[ext_resource type="Texture2D" uid="uid://cwrow0ajohrxr" path="res://assets/Sprout Lands - Sprites - Basic pack/Tilesets/Wooden House.png" id="2_aewib"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jqd4q"]
texture = ExtResource("2_aewib")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, -8, -8, -8, 8, -4, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, -8, -8, -8, 8, -4, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, -8, -8, -8, 8, -4, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ns3rc"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_jqd4q")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lh6dc"]
texture = ExtResource("2_aewib")
1:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0

[sub_resource type="TileSet" id="TileSet_l8jjk"]
sources/0 = SubResource("TileSetAtlasSource_lh6dc")

[sub_resource type="Animation" id="Animation_ghyy8"]
resource_name = "OpenDoor"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 24, 17, 3]
}

[sub_resource type="Animation" id="Animation_tsf0r"]
resource_name = "OpenRoof"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pshyo"]
_data = {
"OpenDoor": SubResource("Animation_ghyy8"),
"OpenRoof": SubResource("Animation_tsf0r")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ity1s"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcjw7"]
size = Vector2(131.5, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o4o3"]
size = Vector2(104, 36)

[node name="WoodenHouse" type="Node2D"]
script = ExtResource("1_idl53")

[node name="House" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ns3rc")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(-65538, 65536, 2, -65537, 65536, 2, -131072, 65536, 2, -131071, 65536, 2, -131070, 65536, 2, -2, 65536, 2, -1, 65536, 2, -65536, 65536, 2, -65535, 65536, 2, -65534, 65536, 2, 65534, 65536, 2, 65535, 65536, 2, 0, 65536, 2, 1, 65536, 2, 2, 65536, 2, 131070, 65536, 2, 131071, 65536, 2, 65536, 65536, 2, 65537, 65536, 2, 65538, 65536, 2, -131076, 65536, 2, -65540, 65536, 2, -4, 65536, 2, -3, 65536, 2, 65533, 65536, 2, 131069, 65536, 2, 131068, 65536, 2, 65532, 65536, 2, -65539, 65536, 2, -131075, 65536, 2, -131074, 65536, 2, -131073, 65536, 2, -196608, 65536, 2, -196607, 65536, 2, -196606, 65536, 2, -196605, 65536, 2, -131069, 65536, 2, -65533, 65536, 2, 3, 65536, 2, 65539, 65536, 2, 131075, 65536, 2, 131074, 65536, 2, 131073, 65536, 2, 131072, 65536, 2, 196607, 65536, 2, 196606, 65536, 2, 196605, 65536, 2, 196604, 65536, 2)
layer_1/name = "Wall"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131073, 65536, 0, 131072, 65536, 3, 131074, 65536, 0, 131075, 65536, 3, 131076, 131072, 3, 65540, 131072, 2, 4, 131072, 2, -65532, 131072, 2, -131068, 131072, 2, -196604, 131072, 2, 131067, 0, 2, 65531, 0, 2, -5, 0, 2, -65541, 0, 2, -131077, 0, 2, 196603, 0, 3, 196604, 65536, 3, 196605, 65536, 0, 196606, 65536, 3, -196612, 65536, 1, -196611, 65536, 1, -196610, 65536, 1, -196609, 65536, 1, -262144, 65536, 1, -262143, 65536, 1, -262142, 65536, 1, -262141, 65536, 1, -262140, 131072, 1, -196613, 0, 1)

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(-8, 40)
texture = ExtResource("2_aewib")
hframes = 7
vframes = 5
frame = 10

[node name="Roof" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_l8jjk")
format = 2
layer_0/name = "Roof"
layer_0/tile_data = PackedInt32Array(196605, 327680, 4, 196606, 327680, 4, 196607, 327680, 4, 131072, 327680, 4, 131073, 327680, 4, 131074, 327680, 4, 131075, 327680, 4, 196604, 327680, 4, 131076, 393216, 4, 196603, 262144, 4, -262145, 327680, 0, -262146, 327680, 0, -262147, 327680, 0, -262148, 327680, 0, -327680, 327680, 0, -327679, 327680, 0, -327678, 327680, 0, -327677, 327680, 0, -327676, 393216, 0, -262149, 262144, 0, -196613, 262144, 1, 131067, 262144, 3, 65540, 393216, 3, -262140, 393216, 1, -196604, 393216, 1, 4, 393216, 3, 65531, 262144, 3, -131077, 262144, 1, -65540, 327680, 2, -65539, 327680, 2, -65537, 327680, 2, -65538, 327680, 2, -131072, 327680, 2, -131071, 327680, 2, -131070, 327680, 2, -131069, 327680, 2, -131068, 393216, 2, -65541, 262144, 2, -5, 262144, 3, -65532, 393216, 3, -4, 327680, 3, -3, 327680, 3, -2, 327680, 3, -1, 327680, 3, -65536, 327680, 3, -65535, 327680, 3, -65534, 327680, 3, 2, 327680, 3, 3, 327680, 3, -65533, 327680, 3, 1, 327680, 3, 0, 327680, 3, 65535, 327680, 3, 65534, 327680, 3, 65533, 327680, 3, 65532, 327680, 3, 131068, 327680, 3, 131069, 327680, 3, 131070, 327680, 3, 131071, 327680, 3, 65536, 327680, 3, 65537, 327680, 3, 65538, 327680, 3, 65539, 327680, 3, -196605, 327680, 1, -196606, 327680, 1, -196607, 327680, 1, -196608, 327680, 1, -131073, 327680, 1, -131074, 327680, 1, -131075, 327680, 1, -131076, 327680, 1, -196612, 327680, 1, -196611, 327680, 1, -196610, 327680, 1, -196609, 327680, 1, -262144, 327680, 1, -262143, 327680, 1, -262142, 327680, 1, -262141, 327680, 1)

[node name="DoorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pshyo")
}

[node name="OpenDoor" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenDoor"]
position = Vector2(-8, 40)
shape = SubResource("CapsuleShape2D_ity1s")

[node name="HideRoof" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HideRoof"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_xcjw7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HideRoof"]
position = Vector2(0, 38)
shape = SubResource("RectangleShape2D_4o4o3")

[connection signal="body_entered" from="OpenDoor" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="OpenDoor" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HideRoof" to="." method="_on_hide_roof_body_entered"]
[connection signal="body_exited" from="HideRoof" to="." method="_on_hide_roof_body_exited"]
